<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/def_color_04">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/linear_nativo">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/msg_saida"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_nao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bt_nao"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:paddingTop="28dp"
                android:paddingBottom="28dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bt_efeito_nao"/>
            <Button
                android:id="@+id/btn_sair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/bt_sim"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:paddingTop="28dp"
                android:paddingBottom="28dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/bt_efeito_sim"/>
        </LinearLayout>

        <!--<androidx.cardview.widget.CardView
            android:id="@+id/ad_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="3dp"/>-->

        <FrameLayout
            android:id="@+id/frame_saida"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </LinearLayout>

</ScrollView>